--- a/styles.css
+++ b/styles.css
@@ -1,88 +1,34 @@
-html {
-    height: 100%;
+*, *::before, *::after {
+    box-sizing: border-box;
 }
 
-body {
-    background-color: rgb(252, 252, 252);
-    height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+:root {
+    --background-color: rgb(245, 245, 245);
+    --background-dark-1: rgb(230, 230, 230);
+    --background-dark-2: rgb(221, 221, 221);
+    --background-dark-3: rgb(203, 203, 203);
+
+    --primary: rgb(21, 231, 140);
+    --primary-dark-1: rgb(18, 199, 120);
+    --primary-dark-2: rgb(15, 168, 102);
+    --primary-dark-3: rgb(12, 138, 83);
+
+    --success: rgb(31, 217, 24);
+
+    --error: rgb(255, 12, 32);
 }
 
-form {
+html, body {
+    margin: 0;
+}
+
+.flexbox-column {
     display: flex;
     flex-flow: column wrap;
 }
 
-.container {
-    display: flex;
-    flex-flow: column wrap;
-    margin: 100px auto;
-    padding: 30px;
-
-    justify-content: center;
-    align-content: center;
-}
-
-.login-container {
-    display: flex;
-    flex-flow: column wrap;
-    padding: 80px 20px;
-
-    width: 80%;
-    margin: 0 auto;
-    /* border: 1px solid black; */
-
-    background-color: rgb(252, 252, 252);
-
-    justify-content: center;
-    align-content: center;
-
-}
-.login-container img {
-    margin-bottom: 10px;
-}
-.login-container input {
-    margin: 12px;
-    margin-bottom: 0;
-    padding: 15px;
-    background-color: white;
-    border: none;
-    border-radius: 10px;
-    outline: 1px solid black;
-}
-.login-container input[type='submit'] {
-    background-color: #0095f6;
-    margin-top: 30px;
-    padding: 10px;
-    
-    border: none;
-    border-radius: 10px;
-    color: white;
-    font-size: 1.2rem;
-    outline: none;
-}
-
-.sign-up {
-    text-align: center;
-    font-size: 1.2rem;
-}
-.sign-up a {
-    text-decoration: none;
-}
-
-.options-list ul {
+.flexbox-row {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
-
-    font-size: 1.3rem;
-
-    padding: 50px;
-    list-style-type: none;
-}   
-.options-list a {
-    color: #0095f6;
-    text-decoration: none;
-    margin: 30px;
-    padding: 40px;
 }
+
