--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,22 @@
     --default-font: 'Chakra Petch', sans-serif;
     --heading-font: 'Bebas Neue', cursive;
 
-    --background-color: rgb(245, 245, 245);
-    --background-dark-1: rgb(230, 230, 230);
-    --background-dark-2: rgb(221, 221, 221);
-    --background-dark-3: rgb(203, 203, 203);
+    --background-light-4: rgb(227, 227, 227);
+    --background-light-3: rgb(196, 196, 196);
+    --background-light-2: rgb(165, 165, 165);
+    --background-light-1: rgb(122, 122, 122);
+    --background-color: rgb(57, 57, 57);
+    --background-dark-1: rgb(43, 43, 43);
+    --background-dark-2: rgb(29, 29, 29);
+    --background-dark-3: rgb(19, 19, 19);
 
-    --primary: rgb(21, 231, 140);
-    --primary-dark-1: rgb(18, 199, 120);
-    --primary-dark-2: rgb(15, 168, 102);
-    --primary-dark-3: rgb(12, 138, 83);
+    --font-color: rgb(240, 240, 240);
+    --muted-font: rgb(171, 171, 171);
+
+    --primary: rgb(241, 158, 14);
+    --primary-dark-1: rgb(191, 127, 17);
+    --primary-dark-2: rgb(166, 110, 15);
+    --primary-dark-3: rgb(105, 70, 9);
 
     --success: rgb(31, 217, 24);
 
@@ -26,11 +33,26 @@ html, body {
     margin: 0;
     background-color: var(--background-color);
     font-family: var(--default-font);
+    color: var(--font-color);
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.icon-tabler {
+    stroke: var(--muted-font);
 }
 
 .flexbox-column {
     display: flex;
     flex-flow: column wrap;
+}
+
+.ajc {
+    align-items: center;
+    justify-content: center;
 }
 
 .flexbox-row {
@@ -45,16 +67,123 @@ html, body {
     justify-content: center;
     flex-flow: row wrap;
     font-family: var(--monospace-font);
-    font-size: 2rem;
+    font-size: 3rem;
+    color: var(--primary);
 }
 
-#before, #after {
-    color: var(--primary);
+@media (max-width: 1300px) {
+    #jumbotron {
+        font-size: 2.5rem;
+    }
+}
+
+@media (max-width: 1050px) {
+    #jumbotron {
+        font-size: 2rem;
+    }
+}
+
+@media (max-width: 850px) {
+    #jumbotron {
+        font-size: 1.5rem;
+    }
+}
+
+.rotate {
+    transition: transform ease 0.5s;
+}
+
+@media (max-width: 620px) {
+    .rotate {
+        transform: rotate(90deg);
+    }
+    #jumbotron {
+        height: 100vw;
+        width: 95vh;
+    }
+}
+
+#before, #after, #left-wrapper, #right-wrapper {
+    color: var(--background-light-1);
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
 }
 
-#before {
+#before, #left-wrapper {
     align-items: flex-end;
+    transition: top ease 0.25s, bottom ease 0.25s;
+}
+
+#before, #after {
+    position: relative;
+}
+
+#left-wrapper, #right-wrapper {
+    position: absolute;
+}
+
+.before-link, .after-link {
+    transition: font-size ease 0.25s;
+    position: relative;
+}
+
+#before span:not(.active), #after span:not(.active) {
+    font-size: 1rem;
+}
+
+#before .active, #after .active {
+    color: var(--font-color);
+    z-index: 1;
+}
+
+.footer-bar {
+    position: fixed;
+    bottom: 0;
+    padding: 15px 100px;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+@media (max-width: 700px) {
+    .footer-bar {
+        padding: 15px 50px;
+    }
+}
+@media (max-width: 500px) {
+    .footer-bar {
+        padding: 15px 15px;
+    }
+    .footer-bar span {
+        display: none;
+    }
+}
+
+.logo {
+    cursor: pointer;
+    user-select: none;
+    font-size: 1.1rem;
+}
+
+.header-bar {
+    position: fixed;
+    top: 0;
+    padding: 25px 100px;
+    width: 100%;
+    z-index: 2;
+}
+
+@media (max-width: 500px) {
+    .header-bar {
+        padding: 15px 15px;
+    }
+}
+
+.header-bar #header-text a {
+    border-radius: 50px;
+    background-color: var(--background-dark-2);
+    color: var(--primary);
+    padding: 8px 15px;
+    margin-bottom: 10px;
 }
