--- a/styles.css
+++ b/styles.css
@@ -7,26 +7,43 @@
     --default-font: 'Chakra Petch', sans-serif;
     --heading-font: 'Bebas Neue', cursive;
 
-    --background-light-4: rgb(227, 227, 227);
-    --background-light-3: rgb(196, 196, 196);
-    --background-light-2: rgb(165, 165, 165);
-    --background-light-1: rgb(122, 122, 122);
-    --background-color: rgb(57, 57, 57);
-    --background-dark-1: rgb(43, 43, 43);
-    --background-dark-2: rgb(29, 29, 29);
-    --background-dark-3: rgb(19, 19, 19);
+    --background-light-4: rgb(255, 255, 255);
+    --background-light-3: rgb(255, 255, 255);
+    --background-light-2: rgb(250, 250, 250);
+    --background-light-1: rgb(246, 246, 246);
+    --background-color: rgb(243, 243, 243);
+    --background-dark-1: rgb(219, 219, 219);
+    --background-dark-2: rgb(181, 181, 181);
+    --background-dark-3: rgb(162, 162, 162);
 
-    --font-color: rgb(240, 240, 240);
-    --muted-font: rgb(171, 171, 171);
+    --font-color: rgb(0, 0, 0);
+    --light-font-color: rgb(240, 240, 240);
+    --muted-font: rgb(169, 169, 169);
+    --light-muted-font: rgb(200, 200, 200);
 
-    --primary: rgb(241, 158, 14);
-    --primary-dark-1: rgb(191, 127, 17);
+    --primary-light-3: rgb(118, 167, 255);
+    --primary-light-2: rgb(79, 142, 255);
+    --primary-light-1: rgb(40, 116, 255);
+    --primary: rgb(0, 94, 255);
+    --primary-dark-1: rgb(7, 53, 140);
     --primary-dark-2: rgb(166, 110, 15);
     --primary-dark-3: rgb(105, 70, 9);
 
     --success: rgb(31, 217, 24);
 
     --error: rgb(255, 12, 32);
+}
+
+::-webkit-scrollbar {
+    width: 1em;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--background-color);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--background-dark-2);
 }
 
 html, body {
@@ -45,9 +62,40 @@ a {
     stroke: var(--muted-font);
 }
 
+/*
+    layout styles
+*/
+
+.flexbox-row {
+    display: flex;
+    flex-flow: row wrap;
+}
+
 .flexbox-column {
     display: flex;
     flex-flow: column wrap;
+}
+
+.column-full {
+    width: 100%;
+}
+
+.column-half {
+    width: 50%;
+}
+
+.column-third {
+    width: 33.3333%;
+}
+
+.column-twothird {
+    width: 66.6666%;
+}
+
+@media (max-width: 900px) {
+    .column-half, .column-full, .column-third, .column-twothird {
+        width: 100%;
+    }
 }
 
 .ajc {
@@ -55,10 +103,173 @@ a {
     justify-content: center;
 }
 
-.flexbox-row {
-    display: flex;
-    flex-flow: row wrap;
+.aic {
+    align-items: center;
 }
+
+.jcc {
+    justify-content: center;
+}
+
+.jcsb {
+    justify-content: space-between;
+}
+
+.jcse {
+    justify-content: space-evenly;
+}
+
+.aibl {
+    align-items: baseline;
+}
+
+.aifs {
+    align-items: flex-start;
+}
+
+.aife {
+    align-items: flex-end;
+}
+
+.jcfs {
+    justify-content: flex-start;
+}
+
+.jcfe {
+    justify-content: flex-end;
+}
+
+.align-right {
+    text-align: right;
+}
+
+.center {
+    margin: 0 auto;
+}
+
+.pad-5 {
+    padding: 5px;
+}
+
+.pad-10 {
+    padding: 10px;
+}
+
+.pad-20 {
+    padding: 20px;
+}
+
+.pad-30 {
+    padding: 30px;
+}
+
+.pad-40 {
+    padding: 40px;
+}
+
+.pad-50 {
+    padding: 50px;
+}
+
+.no-pad-50 {
+    padding: 50px;
+}
+
+@media (max-width: 900px) {
+    .no-pad-50 {
+        padding: 10px;
+    }
+}
+
+.mar-5 {
+    margin: 5px;
+}
+
+.mar-10 {
+    margin: 10px;
+}
+
+.mar-20 {
+    margin: 20px;
+}
+
+.mar-30 {
+    margin: 30px;
+}
+
+.mar-40 {
+    margin: 40px;
+}
+
+.mar-50 {
+    margin: 50px;
+}
+
+.space-lr {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.mt-5 {
+    margin-top: 5px;
+}
+
+.mbt-10 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.mt-10 {
+    margin-top: 10px;
+}
+
+.mt-30 {
+    margin-top: 30px;
+}
+
+.mt-50 {
+    margin-top: 50px
+}
+
+.mb-5 {
+    margin-bottom: 5px;
+}
+
+.mb-10 {
+    margin-bottom: 10px;
+}
+
+.mb-30 {
+    margin-bottom: 30px;
+}
+
+.mb-50 {
+    margin-bottom: 50px
+}
+
+.pl-10 {
+    padding-left: 10px;
+}
+
+.pr-10 {
+    padding-right: 10px;
+}
+
+
+/*
+    base components
+*/
+
+h1 {
+    font-family: var(--monospace-font);
+    font-size: 3rem;
+    margin: 20px 0;
+    border-bottom: 4px solid ;
+}
+
+/*
+    frontpage styles
+*/
 
 #jumbotron {
     height: 100vh;
@@ -69,6 +280,7 @@ a {
     font-family: var(--monospace-font);
     font-size: 3rem;
     color: var(--primary);
+    font-weight: 600;
 }
 
 @media (max-width: 1300px) {
@@ -97,14 +309,10 @@ a {
     .rotate {
         transform: rotate(90deg);
     }
-    #jumbotron {
-        height: 100vw;
-        width: 95vh;
-    }
 }
 
 #before, #after, #left-wrapper, #right-wrapper {
-    color: var(--background-light-1);
+    color: var(--muted-font);
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
@@ -138,7 +346,7 @@ a {
 }
 
 .footer-bar {
-    position: fixed;
+    position: sticky;
     bottom: 0;
     padding: 15px 100px;
     width: 100%;
@@ -167,7 +375,7 @@ a {
 }
 
 .header-bar {
-    position: fixed;
+    position: absolute;
     top: 0;
     padding: 25px 100px;
     width: 100%;
@@ -183,7 +391,16 @@ a {
 .header-bar #header-text a {
     border-radius: 50px;
     background-color: var(--background-dark-2);
-    color: var(--primary);
     padding: 8px 15px;
     margin-bottom: 10px;
+}
+
+
+/*
+    projects styles
+*/
+.page-2 {
+    border-top: 3px solid var(--primary);
+    background-color: rgb(30, 30, 30);
+    color: var(--light-font-color);
 }
