--- a/styles.css
+++ b/styles.css
@@ -423,7 +423,7 @@ h2.big {
     projects styles
 */
 .page-2 {
-    border-top: 3px solid var(--primary);
+    border-top: 4px solid var(--primary);
     background-color: var(--page-background);
     color: var(--light-font-color);
     --page-background-light-2: rgb(1, 28, 88);
@@ -456,4 +456,8 @@ h2.big {
     border-radius: 15px;
     background-color: var(--page-background-dark-1);
     padding: 5px 10px;
+}
+
+.project .flair svg {
+    margin: 0 8px;
 }
