--- a/styles.css
+++ b/styles.css
@@ -315,6 +315,57 @@ h2.big {
     text-transform: lowercase;
 }
 
+.table-container {
+    max-width: 100vw;
+    overflow-x: auto;
+    width: 100%;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 2px solid var(--light-font-color);
+}
+
+table td, table th {
+    padding: 15px;
+}
+
+table thead {
+    font-family: var(--decorative-font);
+    text-transform: lowercase;
+    font-size: 1.2rem;
+}
+
+table thead tr {
+    border-bottom: 2px solid var(--light-font-color);
+}
+
+table td:nth-child(2n-1) {
+    background-color: var(--dark-background-dark-1);
+}
+
+table td:nth-child(2n) {
+    background-color: var(--dark-background);
+}
+
+tbody {
+    font-family: var(--monospace-font);
+    font-size: 1.2rem;
+}
+
+table tbody tr td {
+    transition: background-color ease 0.25s;
+}
+
+table tbody tr:hover td {
+    background-color: var(--dark-background-light-1);
+}
+
+.hidden {
+    display: none;
+}
+
 /*
     frontpage styles
 */
@@ -565,6 +616,16 @@ h2.big {
     transition: background-color ease 0.25s;
 }
 
+.last-timeline-item::after {
+    content: '';
+    width: 10px;
+    height: 100%;
+    background-color: var(--background-color);
+    position: absolute;
+    left: -35px;
+    top: 65px;
+}
+
 .timeline-item:hover::before {
     background-color: var(--primary);
 }
@@ -629,6 +690,7 @@ h2.big {
 @media (max-width: 400px) {
     .project {
         margin: 10px;
+        max-width: 320px;
     }
 }
 
@@ -653,6 +715,12 @@ h2.big {
 
 .project .project-content {
     margin-left: 20px;
+    max-width: 100%;
+}
+
+.mjxgui-demo-button {
+    cursor: pointer;
+    user-select: none;
 }
 
 .mini-project {
