--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,10 @@ a.a {
     font-family: var(--monospace-font);
 }
 
+input, button {
+    font-family: var(--default-font);
+}
+
 code {
     background-color: var(--background-dark-1);
     border-radius: 6px;
@@ -881,14 +885,16 @@ table tbody tr:hover td {
 .project-nav-link {
     border-radius: 30px;
     padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
     background-color: var(--background-dark-1);
     color: var(--font-color);
     cursor: pointer;
     border: 2px solid transparent;
     transition: border-color ease 0.2s;
     flex-wrap: nowrap;
+    user-select: none;
+    margin: 5px 10px;
+    font-size: 1rem;
+    height: 100%;
 }
 
 .project-nav-link:hover {
@@ -977,7 +983,6 @@ table tbody tr:hover td {
     color: var(--font-color);
     padding: 10px;
     margin: 30px 15px;
-    box-shadow: inset 0 0 10px black;
     border-radius: 20px;
     position: relative;
 }
