--- a/styles.css
+++ b/styles.css
@@ -895,10 +895,22 @@ table tbody tr:hover td {
     margin: 5px 10px;
     font-size: 1rem;
     height: 100%;
+    position: relative;
 }
 
-.project-nav-link:hover {
-    border-color: var(--primary-dark-1);
+.project-nav-link::before {
+    position: absolute;
+    bottom: -10px;
+    content: '';
+    height: 3px;
+    width: 69%;
+    background-color: transparent;
+    border-radius: 2px;
+    transition: background-color ease 0.2s;
+}
+
+.project-nav-link.current-project::before, .project-nav-link:hover::before {
+    background-color: var(--background-dark-1);
 }
 
 .project {
