--- a/styles.css
+++ b/styles.css
@@ -853,12 +853,16 @@ table tbody tr:hover td {
 .project-container {
     justify-content: center;
     position: relative;
+    overflow-x: hidden;
 }
 
 #project-navbar {
     width: 100%;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
 
 #project-navbar::-webkit-scrollbar {
@@ -879,6 +883,7 @@ table tbody tr:hover td {
     font-size: 1rem;
     height: 100%;
     position: relative;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
 }
 
 .project-nav-link::before {
@@ -886,7 +891,7 @@ table tbody tr:hover td {
     bottom: -10px;
     content: '';
     height: 3px;
-    width: 69%;
+    width: 10px;
     background-color: transparent;
     border-radius: 2px;
     transition: background-color ease 0.2s;
@@ -901,9 +906,17 @@ table tbody tr:hover td {
     height: 55vh;
     background-color: var(--background-dark-1);
     color: var(--font-color);
-    transition: background-color ease 0.25s;
+    transition: left ease 0.25s;
     border-radius: 20px;
     overflow-y: auto;
+    position: relative;
+    left: 100%;
+    display: none;
+}
+
+.project.active-project {
+    display: flex;
+    left: 0;
 }
 
 @media (max-width: 400px) {
