--- a/styles.css
+++ b/styles.css
@@ -1167,6 +1167,7 @@ nav#quick-nav .section-link {
     height: 3px;
     width: 100%;
     transition: background-color ease 0.2s, bottom ease 0.2s;
+    border-radius: 2px;
 }
 
 #quick-nav .section-link:hover::before {
