--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ a.button-link:active {
 }
 
 .center {
-    margin: 0 auto;
+    margin: auto auto;
 }
 
 .pad-5 {
@@ -369,12 +369,12 @@ h1 {
 }
 
 h1.big {
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 @media (max-width: 500px) {
     h1.big {
-        font-size: 3.5rem;
+        font-size: 3rem;
     }
 }
 
@@ -437,10 +437,6 @@ table tbody tr:hover td {
 
 .hidden {
     display: none;
-}
-
-.center {
-    margin: auto auto;
 }
 
 .message-warning {
@@ -689,7 +685,7 @@ table tbody tr:hover td {
 }
 
 .bio-text {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-family: var(--monospace-font);
     z-index: 1;
 }
@@ -729,6 +725,10 @@ table tbody tr:hover td {
     border-left: 1px solid var(--muted-font);
 }
 
+#timeline-demo-button-1 {
+    cursor: pointer;
+}
+
 .first-timeline-item {
     margin-top: -86px;
 }
@@ -766,6 +766,7 @@ table tbody tr:hover td {
 
 .timeline-item h2 {
     margin: 10px 0 0;
+    font-size: 1.2rem;
 }
 
 .timeline-item .timeline-year {
@@ -871,7 +872,7 @@ table tbody tr:hover td {
     -ms-overflow-style: none;
     scrollbar-width: none;
     position: sticky;
-    top: 70px;
+    top: 0;
     z-index: 2;
 }
 
@@ -1153,9 +1154,6 @@ small.helper-button {
     quick nav styles
 */
 nav#quick-nav {
-    position: sticky;
-    top: 0;
-    background-color: transparent;
     color: var(--font-color);
     font-size: 1rem;
     font-family: var(--monospace-font);
@@ -1182,7 +1180,7 @@ nav#quick-nav .section-link {
 
 #quick-nav .section-link:hover::before {
     bottom: -7px;
-    background-color: var(--light-font-color);
+    background-color: var(--dark-background);
 }
 
 #quick-nav .section-link svg {
