--- a/styles.css
+++ b/styles.css
@@ -435,6 +435,10 @@ table tbody tr:hover td {
     background-color: var(--dark-background-light-1);
 }
 
+#mjxgui_editor_window {
+    z-index: 5;
+}
+
 .hidden {
     display: none;
 }
@@ -697,7 +701,7 @@ table tbody tr:hover td {
 }
 
 #my-photo-mobile, #my-photo-large-screen {
-    background-color: red;
+    background: grey;
 }
 
 #my-photo-mobile {
